--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,39 @@ li:hover {
   font-size: 1.2em;
   transition: 0.6s ease;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(49,179,171);
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: rgb(153, 255, 200);
+}
+
+ul {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
